css/styles.css
body {
  position: relative;
}

#section1 {
  padding-top: 50px;
  height: 100%;
}

#section2 {
  padding-top: 50px;
  height: 100%;
  color: #fff;
}

#section3 {
  padding-top: 50px;
  height: 100%;
  color: #fff;
}

#section4 {
  padding-top: 50px;
  height: 100%;
  color: #fff;
}

.newPatientImage{
  height: auto;
  width: 100%;
}
.accordionSize{
  width: 50%;
}

.accordionBox{
  border: 2px solid #FEF6EB ;
}

.toothIcon{
  height: 15%;
  width: 15%;
}

#navlogo{
  margin-left: 10px;
  height: 50px;
  width: 100px;
  object-fit: scale-down;
}

.drWriteUp{
  height: 400px;
}

#satulaImg{
  padding-left: unset;
}

#muellerImg{
  padding-right: unset;
}

.move-left{
  text-align: left;
}

.move-right{
  padding: inherit;
}

.drBackground{
  background-color:: #fafbfc;
}

.border{
  margin-top: 20px;
  margin-bottom: 20px;
}
/* Landscape phones and down */
@media (max-width: 480px) {
  #photoSection{
    padding-top: 50px;
  }
  .toothIcon{
    height: 15%;
    width: 15%;
  }
  .accordionSize{
    width: 100%;
  }
  .newPatientImage{
    height: 100%;
    width: 100%;
  }
  .drImage {
    width: 70%;
    height: 50%;
    object-fit: contain;
  }
  #satulaImg{
    text-align: -webkit-center;
  }

  #muellerImg{
    text-align: -webkit-center;
    margin-left: -15px;
}

  .center{
    text-align: center !important;
  }
}


#logoSection {
  padding-top: 50px;
  height: 200px;
}
.mainPhoto {
  height: 100%;
  width: 100%;
  object-fit: contain;
}

.photoDiv{
  padding-left: 0px;
  padding-right: 0px;
}

.photoContainer{
  padding-top: 50px;
  height: 100%;
}

#WDALogo{
  height: 100px;
  width: 150px;
  object-fit: contain;
  margin-left: 15px;
}

#ADALogo{
  height: 100px;
  width: 150px;
  object-fit: scale-down;
  margin-left: 15px;
  padding-right: 60px;
}

#retirementPhoto {

  padding: 15px;
}
#retirementPhotoSection {

  padding-top: 60px;
}



#logo{
  height: 100%;
  width: 400px;
  object-fit: contain;
  padding: 15px;
}

.contactInfo{
  padding-top:25px;
}

#navTelephone{
  margin-top: 10px;
  margin-right: 25px;
  font-size: 20px;
}

#logoTelephone{
  margin-top: 20px;
  font-size: 20px;
}

#welcomeBanner{
background-color: white;
height: 215px;
padding: 0px;
margin: 0px -15px 0px 0px;
}

p {
  font-family: arial, sans-serif;
  font-size: 15px !important;
}

a:hover {
  text-decoration: none !important;
}

.infoButton{

    height: 100px;
    width: 90%;
    text-align: center;
    margin: 10px;
    border: 2px solid ;
}

.infoButton:hover{

    height: 100px;
    width: 90%;
    text-align: center;
    margin: 10px;
    border: 2px solid #FEF6EB ;
    box-shadow: 0 5px 16px 0 black;
}

.cardInfo{
    margin: 10px;
    border: 2px solid #FEF6EB ;
}

.cardPhoto{
  object-fit: contain;

}

.socialMediaTag {
  height: 30px;
  width: 30px;
  object-fit: scale-down;
  margin: 5px;
}

.brown {
  background-color: #beb9b5 !important;
}

.lightBlue {
  background-color: #3399cc;
}

.primaryBackground{
  background-color: #cbe9f2;
}

.bannerBackground{
  background-color: white;
}

.grey {
  background-color: #74828F;
}

.red {
  background-color: #c25b56;
}

.white {
  background-color: #FEF6EB;
}

.darkBlue{
  background-color: #153450;
}

.bottomBanner{
  background-color: #3399cc;
}

.textWhite {
  color: #FEF6EB !important;
}

.primaryText{
  color: #416a89 !important;
}

.textDark{
  color: #153450 !important;
}

.staffContainer {
    position: relative;
    width: 100%;
}

.staffImage {
  opacity: 1;
  display: block;
  width: 100%;
  height: auto;
  transition: .5s ease;
  backface-visibility: hidden;
  object-fit: contain;
  margin: 10px;
}

.staffMiddle {
  transition: .5s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%)
}

.staffContainer:hover .staffImage {
  opacity: 0.3;
}

.staffContainer:hover .staffMiddle {
  opacity: 1;
}

.staffName {
  background-color: #beb9b5;
  color: #FEF6EB;
  font-size: 16px;
  padding: 16px 32px;
}
#retirementLetter{
  padding: 10px;
}

